tests/errors/validation/field-at-top-level.fn
---
Description: Field declared at top level outside any type
Expected: compile error
---

topField: i32

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
